RESOLVED FIXED139453
REGRESSION (r173272): When open PDF from Safari in iBooks, title is replaced to “QuickLookPDF-s72DbgAU-1”
https://bugs.webkit.org/show_bug.cgi?id=139453
Summary REGRESSION (r173272): When open PDF from Safari in iBooks, title is replaced ...
Antti Koivisto
Reported 2014-12-09 11:19:06 PST
Bug in CFNetwork code path
Attachments
patch (1.67 KB, patch)
2014-12-09 11:29 PST, Antti Koivisto
psolanki: review+
Antti Koivisto
Comment 1 2014-12-09 11:29:43 PST
Antti Koivisto
Comment 2 2014-12-09 11:30:32 PST
Pratik Solanki
Comment 3 2014-12-09 11:57:56 PST
Comment on attachment 242947 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=242947&action=review > Source/WebCore/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=139453 Can you add the radar link here as well.
Antti Koivisto
Comment 4 2014-12-09 12:07:11 PST
Darin Adler
Comment 5 2014-12-09 14:08:54 PST
Comment on attachment 242947 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=242947&action=review > Source/WebCore/platform/network/cf/ResourceResponseCFNet.cpp:133 > - RetainPtr<CFStringRef> suggestedFilename = adoptCF(CFURLResponseCopySuggestedFilename(m_cfResponse.get())); > + RetainPtr<CFStringRef> suggestedFilename = adoptCF(CFURLResponseCopySuggestedFilename(cfURLResponse())); > return suggestedFilename.get(); I think that code like this reads better without a local RetainPtr variable: return adoptCF(CFURLResponseCopySuggestedFilename(cfURLResponse())).get(); In fact, I would write this: CFURLResponseRef underlyingResponse = cfURLResponse(); if (!underlyingResponse) return String(); return adoptCF(CFURLResponseCopySuggestedFilename(underlyingResponse)).get();
Antti Koivisto
Comment 6 2014-12-09 16:35:15 PST
> CFURLResponseRef underlyingResponse = cfURLResponse(); > if (!underlyingResponse) > return String(); > return adoptCF(CFURLResponseCopySuggestedFilename(underlyingResponse)).get(); I wouldn't call it 'underlying' though as it doesn't describe the role of a synthesized CFURLResponse very well.
Note You need to log in before you can comment on or make changes to this bug.